// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots CheckBox basic usage 1`] = `
<label
  htmlFor="checkbox1"
>
  <input
    aria-checked={false}
    aria-describedby="checkbox"
    defaultChecked={false}
    disabled={undefined}
    id="checkbox1"
    name="checkbox"
    onClick={[Function]}
    tabIndex="0"
    type="checkbox"
  />
  check me out!
</label>
`;

exports[`Storyshots CheckBox call a function 1`] = `
<label
  htmlFor="checkbox4"
>
  <input
    aria-checked={false}
    aria-describedby="checkbox"
    defaultChecked={false}
    disabled={undefined}
    id="checkbox4"
    name="checkbox"
    onClick={[Function]}
    tabIndex="0"
    type="checkbox"
  />
  check out the console
</label>
`;

exports[`Storyshots CheckBox default checked 1`] = `
<label
  htmlFor="checkbox3"
>
  <input
    aria-checked={true}
    aria-describedby="checkbox"
    defaultChecked={true}
    disabled={undefined}
    id="checkbox3"
    name="checkbox"
    onClick={[Function]}
    tabIndex="0"
    type="checkbox"
  />
  (un)check me out
</label>
`;

exports[`Storyshots CheckBox disabled 1`] = `
<label
  htmlFor="checkbox2"
>
  <input
    aria-checked={false}
    aria-describedby="checkbox"
    defaultChecked={false}
    disabled={true}
    id="checkbox2"
    name="checkbox"
    onClick={[Function]}
    tabIndex="0"
    type="checkbox"
  />
  you cannot check me out
</label>
`;

exports[`Storyshots Dropdown basic usage 1`] = `
<div
  className="paragon-component dropdown"
>
  <button
    aria-expanded={false}
    aria-haspopup="true"
    className="btn border-0 dropdown-toggle btn-secondary"
    onBlur={[Function]}
    onClick={[Function]}
    onKeyDown={[Function]}
    type="button"
  >
    Search Engines
  </button>
  <ul
    aria-hidden={true}
    aria-label="Search Engines"
    className="dropdown-menu"
    role="menu"
  >
    <li
      className="dropdown-item"
    >
      <a
        href="https://google.com"
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        Google
      </a>
    </li>
    <li
      className="dropdown-item"
    >
      <a
        href="https://duckduckgo.com"
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        DuckDuckGo
      </a>
    </li>
    <li
      className="dropdown-item"
    >
      <a
        href="https://yahoo.com"
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        Yahoo
      </a>
    </li>
  </ul>
</div>
`;

exports[`Storyshots InputSelect basic usage 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="asInput5"
  >
    Fruits
  </label>
  <select
    aria-describedby={undefined}
    className="form-control"
    id="asInput5"
    name="fruits"
    onBlur={[Function]}
    onChange={[Function]}
    value="strawberry"
  >
    <option
      value="apple"
    >
      apple
    </option>
    <option
      value="orange"
    >
      orange
    </option>
    <option
      value="strawberry"
    >
      strawberry
    </option>
    <option
      value="banana"
    >
      banana
    </option>
  </select>
</div>
`;

exports[`Storyshots InputSelect separate labels and values 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="asInput6"
  >
    New England States
  </label>
  <select
    aria-describedby={undefined}
    className="form-control"
    id="asInput6"
    name="new-england-states"
    onBlur={[Function]}
    onChange={[Function]}
    value="RI"
  >
    <option
      value="CN"
    >
      Connecticut
    </option>
    <option
      value="ME"
    >
      Maine
    </option>
    <option
      value="MA"
    >
      Massachusetts
    </option>
    <option
      value="NH"
    >
      New Hampshire
    </option>
    <option
      value="RI"
    >
      Rhode Island
    </option>
    <option
      value="VT"
    >
      Vermont
    </option>
  </select>
</div>
`;

exports[`Storyshots InputSelect separate option groups 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="asInput7"
  >
    Northeast States
  </label>
  <select
    aria-describedby={undefined}
    className="form-control"
    id="asInput7"
    name="northeast-states"
    onBlur={[Function]}
    onChange={[Function]}
    value="MD"
  >
    <optgroup
      label="New England States"
    >
      <option
        value="CN"
      >
        Connecticut
      </option>
      <option
        value="ME"
      >
        Maine
      </option>
      <option
        value="MA"
      >
        Massachusetts
      </option>
      <option
        value="NH"
      >
        New Hampshire
      </option>
      <option
        value="RI"
      >
        Rhode Island
      </option>
      <option
        value="VT"
      >
        Vermont
      </option>
    </optgroup>
    <optgroup
      label="Mid Atlantic States"
    >
      <option
        value="DE"
      >
        Delaware
      </option>
      <option
        value="MD"
      >
        Maryland
      </option>
      <option
        value="NJ"
      >
        New Jersey
      </option>
      <option
        value="NY"
      >
        New York
      </option>
      <option
        value="PA"
      >
        Pennsylvania
      </option>
      <option
        value="VA"
      >
        Virginia
      </option>
      <option
        value="DC"
      >
        Washington, DC
      </option>
      <option
        value="WV"
      >
        West Virginia
      </option>
    </optgroup>
  </select>
</div>
`;

exports[`Storyshots InputSelect with validation 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="asInput8"
  >
    Favorite Color
  </label>
  <select
    aria-describedby={undefined}
    className="form-control"
    id="asInput8"
    name="color"
    onBlur={[Function]}
    onChange={[Function]}
    value=""
  >
    <option
      value=""
    >
      
    </option>
    <option
      value="red"
    >
      red
    </option>
    <option
      value="orange"
    >
      orange
    </option>
    <option
      value="yellow"
    >
      yellow
    </option>
    <option
      value="green"
    >
      green
    </option>
    <option
      value="blue"
    >
      blue
    </option>
    <option
      value="purple"
    >
      purple
    </option>
  </select>
</div>
`;

exports[`Storyshots InputText minimal usage 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="asInput9"
  >
    First Name
  </label>
  <input
    aria-describedby={undefined}
    aria-invalid={false}
    className="form-control"
    disabled={false}
    id="asInput9"
    name="name"
    onBlur={[Function]}
    onChange={[Function]}
    placeholder={undefined}
    required={false}
    type="text"
    value="Foo Bar"
  />
</div>
`;

exports[`Storyshots InputText validation 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="asInput10"
  >
    Username
  </label>
  <input
    aria-describedby="undefined description-asInput10"
    aria-invalid={false}
    className="form-control"
    disabled={false}
    id="asInput10"
    name="username"
    onBlur={[Function]}
    onChange={[Function]}
    placeholder={undefined}
    required={false}
    type="text"
    value=""
  />
  <small
    className="form-text"
    id="description-asInput10"
  >
    The unique name that identifies you throughout the site.
  </small>
</div>
`;

exports[`Storyshots Paragon Welcome 1`] = `
<div
  style={
    Object {
      "fontFamily": "\\"Helvetica Neue\\", Helvetica, \\"Segoe UI\\", Arial, freesans, sans-serif",
      "lineHeight": 1.4,
      "margin": 15,
      "maxWidth": 600,
    }
  }
>
  <h1>
    💎 Paragon
  </h1>
  <p>
    This is a documentation and demo space for the Paragon accessible UI component library. Better docs coming soon, but for now, check out our existing components via the links to the left-hand side.
  </p>
  <p>
    Documentation generated with 
    <a
      href="https://github.com/kadirahq/react-storybook"
      rel="noopener noreferrer"
      target="_blank"
    >
      React Storybook
    </a>
    .
  </p>
</div>
`;
